# Matrix-Chain

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
benchs/: CMakeLists.txt  benchs.cpp
include/: matrix_chain.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  check_end_to_end.py  tests.cpp
tests/end-to-end/: 4.ans  6.ans  8.ans  CMakeLists.txt  check_tests.py
tests/end-to-end/tests/: 1.ans  10.ans  3.ans  5.ans  7.ans  9.ans
tests/unit/: CMakeLists.txt  tests.cpp
